--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^5.2.0-beta1",
+    "console": "^0.7.2",
     "core-js": "^3.19.3",
     "jalali-moment": "^3.3.11",
     "mosha-vue-toastify": "^1.0.23",
